--- a/pab_angel/pubspec.yaml
+++ b/pab_angel/pubspec.yaml
@@ -9,6 +9,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  cached_network_image: ^3.4.1
     
 
 dev_dependencies:
@@ -18,6 +19,6 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
-
+  
 assets:
   -images/
